<resources>
    <string name="app_name">pick my bus</string>
    <string name="bus">Bus</string>
    <string name="location_tracking">Location tracking</string>
    <string name="login">Login</string>
    <string name="signup">signup</string>
    <string name="register">Don\'t have an account!</string>

    <string name="splashimg">splashimg</string>


    <string name="stulogin">stulogin</string>
    <string name="mail">mail</string>
    <string name="password">Password</string>
    <string name="conpassword">conform Password</string>
    <string name="string_mailhint">Example@gmail.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="transport_name">Transport Name</string>
    <string name="from">from:</string>
    <string name="to">To:</string>
    <string name="button">Button</string>
    <string name="booking">Booking</string>
    <string name="book">Book</string>
    <string name="transport">Transport :</string>
    <string name="vehicle">Vehicle :</string>
    <string name="phno">Phno:</string>
    <string name="date">Date:</string>
    <string name="dd_mm_yy">DD.MM.YY</string>
    <string name="ticket_number">Ticket Number:</string>
    <string name="track">Track</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="about">About :</string>
    <string name="logout">Logout</string>
    <string name="about_text">This project is developed by Sabarinathan C Mca final year \"820420622035\". This project is helping to commercialize vehicle transport services and combined drivers and customers.</string>
</resources>