<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activitybg"
    tools:context=".studentsignup">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stulogin"
        android:layout_marginTop="54dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/eiffel" />


    <EditText
        android:id="@+id/studentmail"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/textfieldbg"
        android:ems="10"
        android:hint="@string/string_mailhint"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/studentpassword"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textfieldbg"

        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentmail"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/studentconpassword"
        android:layout_width="303dp"
        android:layout_height="48dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/textfieldbg"

        android:ems="10"
        android:hint="@string/conpassword"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentpassword"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/studentsignupbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/btnbg"
        android:text="@string/signup"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/studentconpassword" />
</androidx.constraintlayout.widget.ConstraintLayout>