<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VehicleBooking">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="394dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:paddingTop="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="130dp"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:text="@string/transport"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/transname"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="109dp"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:text="@string/vehicle"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"

                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:text="@string/to"
                    android:textColor="#FB0303"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/phtext"
                    android:layout_width="110dp"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:text="@string/phno"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/phno"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:importantForAutofill="no"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/datetxt"
                    android:layout_width="110dp"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/date"
                    android:layout_width="241dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/dd_mm_yy"
                    android:importantForAutofill="no"
                    android:inputType="date"
                    android:maxLength="10"
                    android:minHeight="48dp"
                    android:textColorHint="#78909C"
                    tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/bookbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:background="@drawable/btnbg"
        android:text="@string/book"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

</androidx.constraintlayout.widget.ConstraintLayout>