<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".third">

    <ScrollView
        android:layout_width="375dp"
        android:layout_height="843dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/logout"
                android:layout_width="44dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:layout_marginTop="29dp"
                android:background="@drawable/btnbg"
                android:text="@string/logout"
                android:textColor="#FFFDFD"
                android:textSize="10sp"
                tools:ignore="TouchTargetSizeCheck" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile_image"
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:layout_gravity="left"
                android:layout_marginTop="10sp"
                android:layout_marginEnd="40sp"
                android:src="@drawable/newphoto"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginStart="10sp"
                android:paddingTop="7sp"
                android:text="@string/about"
                android:textColor="#0002BA"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginStart="8sp"
                android:layout_marginEnd="5sp"
                android:lineSpacingExtra="2sp"
                android:text="@string/about_text"
                android:textAlignment="textStart"
                android:textColor="#020202"
                android:textSize="22sp" />


        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>