<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20sp"
    tools:context=".first">

    <!-- TODO: Update blank fragment layout -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="394dp"
        android:layout_height="395dp"
        android:layout_marginTop="50sp">


        <LinearLayout
            android:layout_width="382dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:orientation="vertical"
            android:paddingTop="5sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="130dp"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:text="@string/transport"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/transname"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="109dp"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:text="@string/vehicle"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/vehicle"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/from"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"

                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:text="@string/to"
                    android:textColor="#FB0303"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/to"
                    android:layout_width="wrap_content"
                    android:layout_height="62dp"
                    android:padding="15sp"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"

                    android:padding="15sp"
                    android:text="@string/ticket_number"

                    android:textColor="#0324FB"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/ticketno"
                    android:layout_width="match_parent"
                    android:layout_height="62dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:padding="15sp"
                    android:textColor="#020202"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"

                    android:background="@drawable/btnbg"
                    android:text="@string/track"
                    android:textColor="#FFFFFF" />
            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>